@@ -1,3 +1,13 @@
+2002-02-12  Kevin Vandersloot <kfv101@psu.edu>
+
+	* prettytable.c: clean up the icon mess. Icons should now
+	get added properly.
+
+	* defaulttable.c: remove gnome-system-monitor from here
+	since I'm now able to pick it up properly
+
+	* proctable.c: gdk_pixbuf_unref->g_object_unref
+
 2002-01-30  Kevin Vandersloot <kfv101@psu.edu>
 
 	* defaulttable.h: change procman to gnome-system-monitor
